# ripple

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  list_tools.py  pyproject.toml  test_basic.py  test_error_debug.py  test_new_features.py  test_skill_loading.py  test_spinner_fix.py  test_tui_debug.py  test_tui_simple.py
.claude/skills/: create-file.md
.ripple/tasks/: task-ca0d6872.txt
config/: settings.yaml.example  settings.yaml.sample
docs/: AGENT_TOOL.md  AUTO_COMPACT.md  CODE_HEALTH_CHECK_2026-04-30.md  FORK_IMPLEMENTATION.md  HOOKS.md  IMPLEMENTATION_REPORT.md  NEW_FEATURES.md  SCHEDULER_DESIGN.md  SKILLS.md  STRUCTURE.md  SUBAGENT_CONFIG.md  SUBAGENT_EXAMPLES.md  SUBAGENT_QUICKREF.md  TASK_MANAGEMENT.md  WEBSOCKET.md
docs/plans/: 2026-04-22-gogcli-integration.md  2026-04-23-gogcli-expansion.md
docs/specs/: 2026-04-21-user-sandbox-design.md  2026-04-21-user-sandbox-plan.md
pages/: agent-system-architecture.html
ripple/api/: client.py  streaming.py
ripple/cli/: main.py  repl.py  tui.py
ripple/core/: agent_loop.py  state.py  transitions.py
scripts/: install-feishu-cli.sh  install-gogcli-cli.sh  install-notion-cli.sh  list_tools.py  reset-sandbox-sessions.sh  start_client.sh  start_server.sh  use-feishu-cli.sh  use-gogcli-cli.sh  use-notion-cli.sh
skills/: hello.md  web-search.md
tests/: test_agent_tool.py  test_bilibili_auto_md_pipeline.py  test_fork_mode.py  test_permission_requests.py  test_scheduler_store.py  test_session_message_history.py  test_session_persistence.py  test_skill.py  test_skills.py  test_subagent.py  test_tui_debug.py
tmp/: test_wj.py
web/: index.html  package-lock.json  package.json
(+250 files in other folders)
