[project]
name = "ripple"
version = "0.1.0"
description = "让每个提问都成为涟漪的中心，每一次循环都是向解的蔓延"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-frontmatter>=1.0",
    "tiktoken>=0.7",
    "rich>=13.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "textual>=8.2.3",
]

[project.scripts]
ripple = "ripple.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
